2019xcor. Sxx(w) Sxx*(w) relations

--- a/2019xcor/dtft.tex
+++ b/2019xcor/dtft.tex
@@ -68,116 +68,145 @@
 %\end{align*}
 %\end{proof}
 
-%20190429%%--------------------------------------
-%20190429%\begin{theorem}
-%20190429%\label{thm:dtft_conjneg}
-%20190429%%--------------------------------------
-%20190429%Let $\Dx(\omega)\eqd\opDTFT\brs{\seqn{\fx[n]}}(\omega)$ be the \fncte{discrete-time Fourier transform} \xref{def:dtft}
-%20190429%of a sequence $\seqxZ{x_n}$ in $\spllR$.
-%20190429%\thmbox{
-%20190429%  \brb{\begin{array}{>{\ds}rc>{\ds}l}
-%20190429%    \Fx(\omega) &\eqd& \opDTFT\seqn{\fx[n]}
-%20190429%    %\\\mc{3}{F}{(\ope{DTFT})}
-%20190429%    %\\\mc{3}{M}{\xref{def:dtft}}
-%20190429%  \end{array}}
-%20190429%  \quad\implies\quad
-%20190429%  \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
-%20190429%      (1).&\opDTFT\seqn{\fx      [-n]} &=& \Fx      (-\omega) & and
-%20190429%    \\(2).&\opDTFT\seqn{\fx^\conj[ n]} &=& \Fx^\conj(-\omega) & and
-%20190429%    \\(3).&\opDTFT\seqn{\fx^\conj[-n]} &=& \Fx^\conj( \omega) & 
-%20190429%  \end{array}}
-%20190429%  }
-%20190429%\end{theorem}
-%20190429%\begin{proof}
-%20190429%\begin{align*}
-%20190429%  \opDTFT\seqn{\fx[-n]}
-%20190429%    &\eqd \sum_{n\in\Z} \fx[-n] e^{-i\omega n}
-%20190429%    && \text{by definition of \ope{DTFT}}
-%20190429%    && \text{\xref{def:dtft}}
-%20190429%  \\&= \sum_{m\in\Z} \fx[m] e^{i\omega m}
-%20190429%     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
-%20190429%  \\&= \sum_{m\in\Z} \fx[m] e^{-i(-\omega)m}
-%20190429%  \\&\eqd \Fx(-\omega)
-%20190429%    && \text{by left hypothesis}
-%20190429%    \\
-%20190429%    \\
-%20190429%  \opDTFT\seqn{\fx^\conj[n]}
-%20190429%    &\eqd \sum_{n\in\Z} \fx^\conj[n] e^{-i\omega n}
-%20190429%    && \text{by definition of \ope{DTFT}}
-%20190429%    && \text{\xref{def:dtft}}
-%20190429%  \\&= \brp{\sum_{n\in\Z} \fx[n] e^{i\omega n}}^\conj
-%20190429%     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-%20190429%     && \text{\xref{def:staralg}}
-%20190429%  \\&= \brp{\sum_{n\in\Z} \fx[n] e^{-i(-\omega)n}}^\conj
-%20190429%  \\&\eqd \Fx^\conj(-\omega)
-%20190429%    && \text{by left hypothesis}
-%20190429%    \\
-%20190429%    \\
-%20190429%  \opDTFT\seqn{\fx^\conj[-n]}
-%20190429%    &\eqd \sum_{n\in\Z} \fx^\conj[-n] e^{-i\omega n}
-%20190429%    && \text{by definition of \ope{DTFT}}
-%20190429%    && \text{\xref{def:dtft}}
-%20190429%  \\&= \brp{\sum_{n\in\Z} \fx[-n] e^{i\omega n}}^\conj
-%20190429%     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-%20190429%     && \text{\xref{def:staralg}}
-%20190429%  \\&= \brp{\sum_{m\in\Z} \fx[m] e^{-i\omega m}}^\conj
-%20190429%     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
-%20190429%  \\&\eqd \Fx^\conj(\omega)
-%20190429%    && \text{by left hypothesis}
-%20190429%\end{align*}
-%20190429%\end{proof}
-%20190429%
-%20190429%%--------------------------------------
-%20190429%\begin{theorem}
-%20190429%\label{thm:dtft_conjneg_real}
-%20190429%%--------------------------------------
-%20190429%Let $\Dx(\omega)\eqd\opDTFT\brs{\seqn{\fx[n]}}(\omega)$ be the \fncte{discrete-time Fourier transform} \xref{def:dtft}
-%20190429%of a sequence $\seqxZ{\fx[n]}$ in $\spllR$.
-%20190429%\thmbox{
-%20190429%  \brb{\begin{array}{FMD}
-%20190429%      (1).&$\Fx(\omega) \eqd \opDTFT\seqn{\fx[n]}$ & and
-%20190429%    \\(2).&$\seqn{\fx[n]}$ is \prope{real-valued}
-%20190429%  \end{array}}
-%20190429%  \quad\implies\quad
-%20190429%  \brb{\begin{array}{F>{\ds}rc>{\ds}lc>{\ds}lD}
-%20190429%      (1).&\opDTFT\seqn{\fx      [-n]} &=& \Fx      (-\omega) & &              & and
-%20190429%    \\(2).&\opDTFT\seqn{\fx^\conj[ n]} &=& \Fx^\conj(-\omega) &=& \Fx( \omega) & and
-%20190429%    \\(3).&\opDTFT\seqn{\fx^\conj[-n]} &=& \Fx^\conj( \omega) &=& \Fx(-\omega) & 
-%20190429%  \end{array}}
-%20190429%  }
-%20190429%\end{theorem}
-%20190429%\begin{proof}
-%20190429%\begin{align*}
-%20190429%  \opDTFT\seqn{\fx[-n]}
-%20190429%    &\eqd \sum_{n\in\Z} \fx[-n] e^{-i\omega n}
-%20190429%    && \text{by definition of \ope{DTFT}}
-%20190429%    && \text{\xref{def:dtft}}
-%20190429%  \\&= \sum_{m\in\Z} \fx[m] e^{i\omega m}
-%20190429%     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
-%20190429%  \\&= \sum_{m\in\Z} \fx[m] e^{-i(-\omega)m}
-%20190429%  \\&\eqd \Fx(-\omega)
-%20190429%    && \text{by left hypothesis}
-%20190429%    \\
-%20190429%    \\
-%20190429%  \boxed{\Fx^\conj(-\omega)}
-%20190429%    &= \boxed{\opDTFT\seqn{\fx^\conj[n]}}
-%20190429%    && \text{by \prefp{thm:dtft_conjneg}}
-%20190429%  \\&= \opDTFT\seqn{\fx[n]}
-%20190429%    && \text{by \prope{real-valued} hypothesis}
-%20190429%  \\&= \boxed{\Fx(\omega)}
-%20190429%    && \text{by definition of $\Fx(\omega)$}
-%20190429%    && \text{\xref{def:dtft}}
-%20190429%    \\
-%20190429%    \\
-%20190429%  \boxed{\Fx^\conj( \omega)}
-%20190429%    &= \boxed{\opDTFT\seqn{\fx^\conj[-n]}}
-%20190429%    && \text{by \prefp{thm:dtft_conjneg}}
-%20190429%  \\&= \opDTFT\seqn{\fx[-n]}
-%20190429%    && \text{by \prope{real-valued} hypothesis}
-%20190429%  \\&= \boxed{\Fx(-\omega)}
-%20190429%    && \text{by result (1)}
-%20190429%\end{align*}
-%20190429%\end{proof}
+%--------------------------------------
+\begin{theorem}
+\label{thm:dtft_conjneg}
+%--------------------------------------
+Let $\Dx(\omega)\eqd\opDTFT\brs{\seqn{\fx[n]}}(\omega)$ be the \fncte{discrete-time Fourier transform} \xref{def:dtft}
+of a sequence $\seqxZ{x_n}$ in $\spllR$.
+\thmbox{
+  \brb{\begin{array}{>{\ds}rc>{\ds}l}
+    \Fx(\omega) &\eqd& \opDTFT\seqn{\fx[n]}
+    %\\\mc{3}{F}{(\ope{DTFT})}
+    %\\\mc{3}{M}{\xref{def:dtft}}
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
+      (1).&\opDTFT\seqn{\fx      [-n]} &=& \Fx      (-\omega) & and
+    \\(2).&\opDTFT\seqn{\fx^\conj[ n]} &=& \Fx^\conj(-\omega) & and
+    \\(3).&\opDTFT\seqn{\fx^\conj[-n]} &=& \Fx^\conj( \omega) & 
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \opDTFT\seqn{\fx[-n]}
+    &\eqd \sum_{n\in\Z} \fx[-n] e^{-i\omega n}
+    && \text{by definition of \ope{DTFT}}
+    && \text{\xref{def:dtft}}
+  \\&= \sum_{m\in\Z} \fx[m] e^{i\omega m}
+     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
+  \\&= \sum_{m\in\Z} \fx[m] e^{-i(-\omega)m}
+  \\&\eqd \Fx(-\omega)
+    && \text{by left hypothesis}
+    \\
+    \\
+  \opDTFT\seqn{\fx^\conj[n]}
+    &\eqd \sum_{n\in\Z} \fx^\conj[n] e^{-i\omega n}
+    && \text{by definition of \ope{DTFT}}
+    && \text{\xref{def:dtft}}
+  \\&= \brp{\sum_{n\in\Z} \fx[n] e^{i\omega n}}^\conj
+     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+     && \text{\xref{def:staralg}}
+  \\&= \brp{\sum_{n\in\Z} \fx[n] e^{-i(-\omega)n}}^\conj
+  \\&\eqd \Fx^\conj(-\omega)
+    && \text{by left hypothesis}
+    \\
+    \\
+  \opDTFT\seqn{\fx^\conj[-n]}
+    &\eqd \sum_{n\in\Z} \fx^\conj[-n] e^{-i\omega n}
+    && \text{by definition of \ope{DTFT}}
+    && \text{\xref{def:dtft}}
+  \\&= \brp{\sum_{n\in\Z} \fx[-n] e^{i\omega n}}^\conj
+     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+     && \text{\xref{def:staralg}}
+  \\&= \brp{\sum_{m\in\Z} \fx[m] e^{-i\omega m}}^\conj
+     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
+  \\&\eqd \Fx^\conj(\omega)
+    && \text{by left hypothesis}
+\end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{proposition}
+\label{prop:dtft_conjsym}
+%--------------------------------------
+Let $\Dx(\omega)\eqd\opDTFT\brs{\seqn{\fx[n]}}(\omega)$ be the \fncte{discrete-time Fourier transform} \xref{def:dtft}
+of a sequence $\seqxZ{x_n}$ in $\spllR$.
+\thmbox{
+  \brb{\begin{array}{rclD}
+    \fx(n) &=& \fx^\ast(-n) & (\prope{conjugate symmetric}) 
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{lD}
+    \FX(\omega) = \FX^\ast(\omega) & (\prope{real-valued})
+  \end{array}}
+  }
+\end{proposition}
+\begin{proof}
+\begin{align*}
+  \FX^\ast(\omega)
+    &\eqd \brs{\opDTFT\fx(n)}^\ast
+  \\&\eqd \brs{\sum_{n\in\Z} \fx(n) e^{-i\omega n}}^\ast && \text{by definition of \ope{DTFT}} && \text{\xref{def:dtft}}
+  \\&=         \sum_{n\in\Z} \fx^\ast(n) e^{i\omega n}   && \text{by \prope{antiautomorphic} property} && \text{\xref{def:staralg}}
+  \\&=         \sum_{n\in\Z} \fx(-n) e^{-i\omega(-n)}    && \text{by hypothesis}
+  \\&=         \sum_{-k\in\Z}\fx(k) e^{-i\omega k}      && \text{where $k\eqd-n$} && \text{$\implies$ $n=-k$}
+  \\&=         \sum_{k\in\Z} \fx(k) e^{-i\omega k}      && \text{by \prope{absolutely summable} property}
+  \\&\eqd      \FX(\omega)                              && \text{by definition of \ope{DTFT}} && \text{\xref{def:dtft}}
+\end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{theorem}
+\label{thm:dtft_conjneg_real}
+%--------------------------------------
+Let $\Dx(\omega)\eqd\opDTFT\brs{\seqn{\fx[n]}}(\omega)$ be the \fncte{discrete-time Fourier transform} \xref{def:dtft}
+of a sequence $\seqxZ{\fx[n]}$ in $\spllR$.
+\thmbox{
+  \brb{\begin{array}{FMD}
+      (1).&$\Fx(\omega) \eqd \opDTFT\seqn{\fx[n]}$ & and
+    \\(2).&$\seqn{\fx[n]}$ is \prope{real-valued}
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{F>{\ds}rc>{\ds}lc>{\ds}lD}
+      (1).&\opDTFT\seqn{\fx      [-n]} &=& \Fx      (-\omega) & &              & and
+    \\(2).&\opDTFT\seqn{\fx^\conj[ n]} &=& \Fx^\conj(-\omega) &=& \Fx( \omega) & and
+    \\(3).&\opDTFT\seqn{\fx^\conj[-n]} &=& \Fx^\conj( \omega) &=& \Fx(-\omega) & 
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \opDTFT\seqn{\fx[-n]}
+    &\eqd \sum_{n\in\Z} \fx[-n] e^{-i\omega n}
+    && \text{by definition of \ope{DTFT}}
+    && \text{\xref{def:dtft}}
+  \\&= \sum_{m\in\Z} \fx[m] e^{i\omega m}
+     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
+  \\&= \sum_{m\in\Z} \fx[m] e^{-i(-\omega)m}
+  \\&\eqd \Fx(-\omega)
+    && \text{by left hypothesis}
+    \\
+    \\
+  \boxed{\Fx^\conj(-\omega)}
+    &= \boxed{\opDTFT\seqn{\fx^\conj[n]}}
+    && \text{by \prefp{thm:dtft_conjneg}}
+  \\&= \opDTFT\seqn{\fx[n]}
+    && \text{by \prope{real-valued} hypothesis}
+  \\&= \boxed{\Fx(\omega)}
+    && \text{by definition of $\Fx(\omega)$}
+    && \text{\xref{def:dtft}}
+    \\
+    \\
+  \boxed{\Fx^\conj( \omega)}
+    &= \boxed{\opDTFT\seqn{\fx^\conj[-n]}}
+    && \text{by \prefp{thm:dtft_conjneg}}
+  \\&= \opDTFT\seqn{\fx[-n]}
+    && \text{by \prope{real-valued} hypothesis}
+  \\&= \boxed{\Fx(-\omega)}
+    && \text{by result (1)}
+\end{align*}
+\end{proof}
 
 %%\begin{center}
 %%\begin{tabular}{cc}
