--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -93,13 +93,16 @@ Here is a formalized list of the eight definitions.
 %=======================================
 \section{Results}
 %=======================================
-Depending on which one of the eight definitions of $\Rxy(m)$ we select:
-\\\indentx$\begin{array}{FMM}
-    \imark & We get 3 different relations between $\Ryx(m)$ and $\Rxy(m)$                                   & \xref{prop:Rxy}
-  \\\imark & We get 2 different relations between $\Rxx(-m)$ and $\Rxx(m)$                                  & \xref{prop:Rxy}
-  \\\imark & We get 4 different results for $\Szxy(z)$                                                      & \xref{prop:RxySzxy}
-  \\\imark & We get 4 different results for $\Swxy(\omega)$                                                 & \xref{prop:RxySwxy}
-  \\\imark & If $\rvx$ and $\rvy$ are \prope{real-valued}, we get two different results for $\Swxy(\omega)$ & \xref{prop:RxySwxy_real}
+Depending on which one of the eight definitions of $\Rxy(m)$ we select, we get \ldots
+\\\indentx$\begin{array}{FMlM}
+    \imark & 3 different relations on the pair   & \opair{\Ryx(m)}{\Rxy(m)}                            & \xref{prop:Rxy}
+  \\\imark & 2 different relations on the pair   & \opair{\Rxx(-m)}{\Rxx(m)}                           & \xref{prop:Rxy}
+  \\\imark & 4 different relations on the triple & \otriple{\Szxy(z)     }{\ZH(z)     }{\Szxx(z)     } & \xref{prop:RxySzxy}
+  \\\imark & 4 different relations on the triple & \otriple{\Szxy(z)     }{\ZH(z)     }{\Szyy(z)     } & \xref{prop:RxySzxy}
+  \\\imark & 4 different relations on the triple & \otriple{\Swxy(\omega)}{\FH(\omega)}{\Swxx(\omega)} & \xref{prop:RxySwxy}
+  \\\imark & 3 different relations on the triple & \otriple{\Swxy(\omega)}{\FH(\omega)}{\Swyy(\omega)} & \xref{prop:RxySwxy}
+  \\\imark & with $\rvx$ and $\rvy$ \prope{real-valued}, 2 relations on & \otriple{\Swxy(\omega)}{\FH(\omega)}{\Swxx(\omega)} & \xref{prop:RxySwxy_real}
+  \\\imark & with $\rvx$ and $\rvy$ \prope{real-valued}, 2 relations on & \otriple{\Swxy(\omega)}{\FH(\omega)}{\Swyy(\omega)} & \xref{prop:RxySwxy_real}
 \end{array}$
 
 
@@ -110,16 +113,16 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
 %\propbox{
 Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
 \\
-$\begin{array}{|Fc        l       c l@{\hspace{0pt}}c@{\hspace{0pt}}r D l    c l@{\hspace{0pt}}c@{\hspace{0pt}}r D|}
+$\begin{array}{|Fc        l       c l@{\hspace{0pt}}c D   l         c l@{\hspace{0pt}}c D|}
   \hline
-    (1) &      \implies& \Ryx(m) &=&\Rxy^\ast&(&-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(& m) & (\prope{conjugate symmetric})
-  \\(2) &      \implies& \Ryx(m) &=&\Rxy^\ast&(&-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(& m) & (\prope{conjugate symmetric})
-  \\(3) &      \implies& \Ryx(m) &=&\Rxy^\ast&(&-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(& m) & (\prope{conjugate symmetric})
-  \\(4) &      \implies& \Ryx(m) &=&\Rxy^\ast&(& m) &and&  \Rxx(-m) &=&\Rxx^\ast&(&-m) & (\prope{conjugate symmetric})
-  \\(5) &      \implies& \Ryx(m) &=&\Rxy     &(&-m) &and&  \Rxx(-m) &=&\Rxx     &(& m) & (\prope{symmetric})
-  \\(6) &      \implies& \Ryx(m) &=&\Rxy     &(&-m) &and&  \Rxx(-m) &=&\Rxx     &(& m) & (\prope{symmetric})
-  \\(7) &      \implies& \Ryx(m) &=&\Rxy     &(&-m) &and&  \Rxx(-m) &=&\Rxx     &(& m) & (\prope{symmetric})
-  \\(8) &      \implies& \Ryx(m) &=&\Rxy     &(&-m) &and&  \Rxx(-m) &=&\Rxx     &(& m) & (\prope{symmetric})
+    (1) &      \implies& \Ryx(m) &=&\Rxy^\ast&(-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(m) & (\prope{conjugate symmetric})
+  \\(2) &      \implies& \Ryx(m) &=&\Rxy^\ast&(-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(m) & (\prope{conjugate symmetric})
+  \\(3) &      \implies& \Ryx(m) &=&\Rxy^\ast&(-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(m) & (\prope{conjugate symmetric})
+  \\(4) &      \implies& \Ryx(m) &=&\Rxy^\ast&(-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(m) & (\prope{conjugate symmetric})
+  \\(5) &      \implies& \Ryx(m) &=&\Rxy     &(-m) &and&  \Rxx(-m) &=&\Rxx     &(m) & (\prope{symmetric})
+  \\(6) &      \implies& \Ryx(m) &=&\Rxy     &(-m) &and&  \Rxx(-m) &=&\Rxx     &(m) & (\prope{symmetric})
+  \\(7) &      \implies& \Ryx(m) &=&\Rxy     &(-m) &and&  \Rxx(-m) &=&\Rxx     &(m) & (\prope{symmetric})
+  \\(8) &      \implies& \Ryx(m) &=&\Rxy     &(-m) &and&  \Rxx(-m) &=&\Rxx     &(m) & (\prope{symmetric})
   \\\hline
 \end{array}$
 %}
@@ -136,11 +139,11 @@ $\begin{array}{|Fc        l       c l@{\hspace{0pt}}c@{\hspace{0pt}}r D l    c l
     \\&\eqd \Rxy^\ast(-m)
       && \text{by Papoulis' definition of $\Rxy(m)$}                           && \text{\xref{def:Rxym}}
     \\
-    (1).\quad\Rxy(-m)
-      &\eqd \pE\brs{\rvx(-m)\rvy^\ast(0)}
-      && \text{by Papoulis' definition of $\Rxy(m)$}                           && \text{\xref{def:Rxym}}
-    \\&=     \pE\brs{\rvx(-m+m)\rvy^\ast(0+m)}
-      && \text{by \prope{wide sense stationary} property}
+    \Rxx(-m)
+      &\eqd \brlr{\Rxy(-m)}_{\rvy=\rvx}
+    \\&= \brlr{\Ryx^\ast(m)}_{\rvy=\rvx}
+      && \text{by previous result}
+    \\&= \Rxx^\ast(m)
 \end{align*}
 
 \begin{align*}
@@ -187,6 +190,23 @@ $\begin{array}{|Fc        l       c l@{\hspace{0pt}}c@{\hspace{0pt}}r D l    c l
      &&\eqd \Rxy(-m)
 \end{align*}
 
+\end{proof}
+
+%---------------------------------------
+\begin{proposition}
+\label{prop:Rxy}
+%---------------------------------------
+\propbox{
+  \brb{\text{$\Rxx(m)$ definition follows (1) or (2) or (3) or (4)}}
+  \quad\implies\quad
+  \brb{\begin{array}{rclM}
+    \Swxx^\ast(\omega) &=& \Swxx(\omega) & (\prope{real-valued})
+  \end{array}}
+}
+\end{proposition}
+\begin{proof}
+This follows from $\Rxx(m)$ (1)--(4) being \prope{conjugate symmetric} \xref{prop:Rxy}
+and from \prefpp{prop:dtft_conjsym}.
 \end{proof}
 
 %---------------------------------------
